--- a/src/Pages/Details/Details.css
+++ b/src/Pages/Details/Details.css
@@ -1,3 +1,22 @@
+.loading {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
+}
+
+.hide-loading {
+  display: none;
+}
+
 .details-container {
   height: 100vh;
   display: flex;
